    delag, ltl2dra, ltl2dgra, and nba2dpa.

  - When autfilt is asked to build a Büchi automaton from
    of a chain of many products, as in
    "autfilt -B --product 1.hoa ... --product n.hoa in.hoa"
    then it will automatically degeneralize the intermediate
    products to avoid exceeding the number of supported
    acceptance sets.

  - genltl learned to generate four new families of LTL formulas:
      --sejk-f=RANGE[,RANGE] f(0,j)=(GFa0 U X^j(b)), f(i,j)=(GFai U
                             G(f(i-1,j)))
      --sejk-j=RANGE         (GFa1&...&GFan) -> (GFb1&...&GFbn)
      --sejk-k=RANGE         (GFa1|FGb1)&...&(GFan|FGbn)
      --sejk-patterns[=RANGE]   φ₁,φ₂,φ₃ from Sikert et al's [CAV'16]
                             paper (range should be included in 1..3)

  - genltl --ms-example can now take a two-range argument,
    (as --sejk-f above).

  Build:

  - ./configure --enable-max-accsets=N let you specify a maximum
    number of acceptance sets that Spot should support.  The default
    is still 32, but this limit is no longer hardcoded.  Larger values
    will cost additional memory and time.

  Library:

  - print_dot(), used print automata in GraphViz's format, underwent
    several changes:

    * option "a", for printing the acceptance condition, is now
      enabled by default.  Option "A", introduced in Spot 2.4, can be
      used to hide the acceptance condition in case you do not want
      it.  This change of course affects the --dot option of all the
      command-line tools, as well as the various way to display
      automata using the Python bindings.

    * when option "1" is used to hide state names and force the
      display of state numbers, the actual state names is now moved to
      the "tooltip" field of the state.  The SVG files produced by
      "dot -Tsvg" will show those as popups.  This is also done for
      state labels of Kripke structures.

    * the output digraph is now named using the name of the automaton