@@ -88,8 +88,12 @@ static const argp_option options[] =
       "F(p0 | XG(p1 | XG(p2 | ... XG(pn))))", 0},
     { "gf-equiv", gen::LTL_GF_EQUIV, "RANGE", 0,
       "(GFa1 & GFa2 & ... & GFan) <-> GFz", 0},
+    { "gf-equiv-xn", gen::LTL_GF_EQUIV_XN, "RANGE", 0,
+      "GF(a <-> X^n(a))", 0},
     { "gf-implies", gen::LTL_GF_IMPLIES, "RANGE", 0,
       "(GFa1 & GFa2 & ... & GFan) -> GFz", 0},
+    { "gf-implies-xn", gen::LTL_GF_IMPLIES_XN, "RANGE", 0,
+      "GF(a -> X^n(a))", 0},
     { "gh-q", gen::LTL_GH_Q, "RANGE", 0,
       "(F(p1)|G(p2))&(F(p2)|G(p3))&...&(F(pn)|G(p{n+1}))", 0 },
     { "gh-r", gen::LTL_GH_R, "RANGE", 0,
