@@ -220,7 +220,9 @@ namespace spot
       LTL_EH_PATTERNS,
       LTL_FXG_OR,
       LTL_GF_EQUIV,
+      LTL_GF_EQUIV_XN,
       LTL_GF_IMPLIES,
+      LTL_GF_IMPLIES_XN,
       LTL_GH_Q,
       LTL_GH_R,
       LTL_GO_THETA,
